[#4496] Fix: Checkboxes for the flooring misaligned (thanks to Michael Oehlhof), r=me
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/realty/trunk@64798 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/pi1/tx_realty_pi1.tpl.css
+++ b/pi1/tx_realty_pi1.tpl.css
@@ -812,7 +812,8 @@ p.tx-realty-pi1-objekt-nr {
 	margin: 0 5px 0 0;
 }
 
-#tx_realty_frontEndEditor .checkbox input {
+#tx_realty_frontEndEditor .checkbox input,
+#tx_realty_frontEndEditor .multicheckboxes input {
 	margin-right: 3px;
 	width: 15px;
 }
